[gd_scene load_steps=3 format=3 uid="uid://o8w4x6fbou3q"]

[ext_resource type="Script" path="res://scenes/ui/options_menu.gd" id="1_gx2wc"]
[ext_resource type="PackedScene" uid="uid://csg5s4g6eg0ob" path="res://scenes/ui/sound_button.tscn" id="3_0qtr1"]

[node name="OptionsMenu" type="CanvasLayer"]
process_mode = 3
layer = 2
script = ExtResource("1_gx2wc")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(320, 180)

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 24

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"BlueOutlineLabel"
theme_override_font_sizes/font_size = 64
text = "Options"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="SoundContainer" type="MarginContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/SoundContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/SoundContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"BlueOutlineLabel"
theme_override_font_sizes/font_size = 32
text = "Sound"
horizontal_alignment = 1

[node name="VolumeSliderContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/SoundContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="SFXContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/SoundContainer/VBoxContainer/VolumeSliderContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/SoundContainer/VBoxContainer/VolumeSliderContainer/SFXContainer"]
layout_mode = 2
theme_type_variation = &"BlueOutlineLabel"
text = "SFX Volume"

[node name="SFXSlider" type="HSlider" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/SoundContainer/VBoxContainer/VolumeSliderContainer/SFXContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="MusicContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/SoundContainer/VBoxContainer/VolumeSliderContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/SoundContainer/VBoxContainer/VolumeSliderContainer/MusicContainer"]
layout_mode = 2
theme_type_variation = &"BlueOutlineLabel"
text = "Music Volume"

[node name="MusicSlider" type="HSlider" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/SoundContainer/VBoxContainer/VolumeSliderContainer/MusicContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="SettingsContainer" type="MarginContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/SettingsContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/SettingsContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"BlueOutlineLabel"
theme_override_font_sizes/font_size = 32
text = "Settings"
horizontal_alignment = 1

[node name="SettingsControlContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/SettingsContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="WindowContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/SettingsContainer/VBoxContainer/SettingsControlContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/SettingsContainer/VBoxContainer/SettingsControlContainer/WindowContainer"]
layout_mode = 2
theme_type_variation = &"BlueOutlineLabel"
text = "Window Mode
"

[node name="WindowModeOptionButton" type="OptionButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/SettingsContainer/VBoxContainer/SettingsControlContainer/WindowContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1
item_count = 2
selected = 0
popup/item_0/text = "Windowed"
popup/item_0/id = 0
popup/item_1/text = "Fullscreen"
popup/item_1/id = 1

[node name="BackButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("3_0qtr1")]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Back
"
